# semilattices

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  semilattices.cabal
.github/workflows/: ci.yml
src/Data/: Bound.hs  Join.hs  Lower.hs  Meet.hs  Semilattice.hs  Tumble.hs  Upper.hs
src/Data/Semilattice/: Bound.hs  Join.hs  Lower.hs  Meet.hs  Order.hs  Tumble.hs  Upper.hs
test/: Doctests.hs
