name:                semilattices
version:             0.0.0.2
synopsis:            Semilattices
description:         Join- and meet-semilattices, with optional upper and lower bounds, and a variety of instances for each.
homepage:            https://github.com/robrix/semilattices
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017-2018 Rob Rix
category:            Algebra, Data, Data Structures, Math
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  ChangeLog.md

library
  exposed-modules:     Data.Semilattice.Bound
                     , Data.Semilattice.Join
                     , Data.Semilattice.Lower
                     , Data.Semilattice.Meet
                     , Data.Semilattice.Order
                     , Data.Semilattice.Tumble
                     , Data.Semilattice.Upper
  build-depends:       base >=4.9 && <4.12
                     , containers >=0.5 && <0.6
                     , hashable >=1.2 && <1.3
                     , unordered-containers >=0.2 && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  default-language:    Haskell2010
  build-depends:       base
                     , doctest >= 0.7 && < 1.0
                     , QuickCheck >= 2.7 && < 2.12
                     , quickcheck-instances == 0.3.*

source-repository head
  type:     git
  location: https://github.com/robrix/semilattices
